Version 0.48.0 (In Progress)

  * add support for zypper OS patterns with "losf addgroup" under SLES
  * fix for incomplete OS package additions under SLES using zypper package management
  * added perl-Log-Log4perl dependency in RPM .spec file for SLES
  * include optional support to define network gateway for Warewulf installs
  * updated ipmi convenience utils (ion,ioff, etc) to use lanplus interface

Version 0.47.2 (15 July 2014)

  * fix for 'sync_config_files' throwing error when no file argument is given

Version 0.47.1 (07 July 2014)

  * fix for 'update -v' not displaying version info
  * addition of a force option (-f) to the update utility allowing updates even 
    when the /root/losf-noupdate file is present

Version 0.47.0 (07 July 2014)

  * bug fix for OS package removal in non-chroot environment
  * use autoconf for package versioning - note: running 'configure' is not required 
    for external usage
  * added support for OS package additions under SLES using zypper package management

Version 0.46.0 (17 June 2014)

  * addition of chroot support for package and file management
  * losf add/del node support added for Warewulf
  * allow recursive calling of losf command within parent 
  * initconfig utility now supports optional directory to use as a template config
  * allow non-interactive option for addalias command
  * inclusion of .spec file to support RPM packaging
  * bug fix for config_latest_install utility when config_dir is not defined

Version 0.45.0 (25 April 2014)

  * typo/grammar edits in INSTALL directions
  * addition of simple upgrade utility to help configure LosF after downloading
    an updated release tarball.  Running "misc/config_latest_install" will update
    a top-level losf soft link to point at the downloaded version, and will
    update the config/config_dir setting based on previously installed
    configurations.

Version 0.44.1 (23 April 2014)
